Tablet uses the mobile header to fix logo clipping issues

--- a/deploy/htdocs/version/src/inc/style/asset/_logo.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_logo.scss
@@ -66,7 +66,7 @@
 		@include size(90px, 30px);
 	}
 
-	@include respond-to(SMALL) {
+	@include respond-to(MEDIUM) {
 		@include size(60px, 19px);
 
 		/**
