--- a/deploy/htdocs/version/src/inc/style/page/_index.scss
+++ b/deploy/htdocs/version/src/inc/style/page/_index.scss
@@ -90,8 +90,8 @@
 		}
 	}
 
-	@include respond-to(SMALL) {
-		padding-top: $sizeGrid*4;
+	@include respond-to(MEDIUM) {
+		padding-top: $sizeGrid*2;
 
 		.component-button-start-advertising {
 			display: none;
@@ -107,5 +107,9 @@
 				@include size(100vh);
 			}
 		}
+	}
+
+	@include respond-to(SMALL) {
+		padding-top: $sizeGrid*4;
 	}
 }
